<resources>
	<string name="app_name" translatable="false">New York Times</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_desc" translatable="false">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="menu_explore">Details</string>
	<string name="welcome">Welcome</string>
	<string name="user_name">Tony Roshdy</string>
	<string name="no_internet">please check your internet connection</string>
	<string name="no_data">No data yet </string>
	<string name="ny_times">NY Times</string>
	<string name="dumb_long_text" translatable="false">Calling api retrofit description Calling api retrofit descriptionCalling api Calling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling api retrofit descriptionCalling api retrofit descriptionCalling api retrofit descriptionCalling api retrofit descriptionCalling api retrofit descriptionCalling api retrofit descriptionCalling api retrofit descriptionCalling api retrofit description</string>
	<string name="dumb_shor_text" translatable="false">apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit descriptionCalling apiCalling api retrofit description Calling api retrofit d api retrofit descriptionCalling apiCalling api retrofit description </string>
	<string name="menu_news">New</string>
	<string name="menu_map">News on Map</string>
	<string name="menu_events">Events</string>
	<string name="menu_leadership">News Topics</string>
	<string name="menu_language" />
	<string name="open">Open</string>
	<string name="close">Close</string>
	<string name="error">Something went wrong</string>
	<string name="tools_text_title">Calling Apis with Retrofit 2 Android</string>
	<string name="tools_tv_likes">Likes(75)</string>
	<string name="tools_tv_views">8 Views</string>
	<string name="tools_tv_date">14 oct,2019</string>
	<string name="loading">loading..</string>
	<string name="reoading">reloading..</string>
	<string name="success">Success</string>
	<string name="not_found">can\'t reach server</string>
	<string name="bad_request">server received wrong data</string>
	<string name="unauthotized">unauthorized user</string>
	<string name="server_error">Server is down, please contact support</string>
	<string name="type">(%1$s) </string>
	<string name="views">%1$s Views</string>
	<string name="search">Search</string>
	<string name="article_id_notvalid">Article id not valid</string>

</resources>
