<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	
	android:layout_marginBottom="@dimen/margin_8"
	android:background="@android:color/transparent">
	
	<androidx.cardview.widget.CardView
		android:id="@+id/card_post"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/article_card_margin_end"
		android:layout_marginStart="@dimen/article_card_margin_end"
		android:orientation="vertical"
		app:cardBackgroundColor="@color/post_card_bg_transparent"
		app:cardCornerRadius="@dimen/margin_8"
		app:cardElevation="@dimen/zero"
		app:contentPaddingBottom="@dimen/margin_8"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.6"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/transparent">
			
			<de.hdodenhof.circleimageview.CircleImageView
				android:id="@+id/iv_post_cover"
				android:layout_width="@dimen/iv_80"
				android:layout_height="@dimen/iv_80"
				android:layout_marginStart="@dimen/article_item_margin"
				android:layout_marginTop="@dimen/margin_16"
				android:layout_marginBottom="@dimen/margin_16"
				android:scaleType="centerCrop"
				android:src="@drawable/news_image_placeholder"
				app:civ_border_color="@color/colorPrimary"
				app:civ_border_width="@dimen/circle_img_border_width"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
			
			<TextView
				android:id="@+id/tv_title"
				style="@style/semiLargeTextView"
				android:layout_width="@dimen/zero"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_16"
				android:maxLines="@integer/article_title_max_lines"
				android:textColor="@color/black"
				app:layout_constraintBottom_toBottomOf="@+id/iv_post_cover"
				app:layout_constraintEnd_toStartOf="@id/guideline3"
				app:layout_constraintStart_toEndOf="@+id/iv_post_cover"
				app:layout_constraintTop_toTopOf="@+id/iv_post_cover"
				app:layout_constraintVertical_bias="0.2"
				tools:text="@string/tools_text_title" />
			
			<TextView
				android:id="@+id/tv_likes"
				style="@style/vSmallTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="@+id/tv_creation_date"
				app:layout_constraintEnd_toStartOf="@+id/tv_views"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toEndOf="@+id/tv_creation_date"
				app:layout_constraintTop_toTopOf="@+id/tv_creation_date"
				tools:text="@string/tools_tv_likes" />
			
			<TextView
				android:id="@+id/tv_views"
				style="@style/vSmallTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/margin_8"
				app:layout_constraintBottom_toBottomOf="@+id/tv_likes"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toEndOf="@+id/tv_likes"
				app:layout_constraintTop_toTopOf="@+id/tv_likes"
				tools:text="@string/tools_tv_views" />
			
			<TextView
				android:id="@+id/tv_creation_date"
				style="@style/vSmallTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/margin_8"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/tv_likes"
				app:layout_constraintHorizontal_bias="0.07"
				app:layout_constraintHorizontal_chainStyle="spread"
				app:layout_constraintStart_toEndOf="@+id/iv_post_cover"
				app:layout_constraintStart_toStartOf="@+id/tv_title"
				app:layout_constraintTop_toBottomOf="@+id/tv_title"
				app:layout_constraintVertical_bias="1.0"
				tools:text="@string/tools_tv_date" />
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.85" />
		
		
		</androidx.constraintlayout.widget.ConstraintLayout>
	
	</androidx.cardview.widget.CardView>
	
	<ImageView
		android:id="@+id/iv_label"
		android:layout_width="@dimen/iv_50"
		android:layout_height="@dimen/iv_50"
		android:layout_marginEnd="@dimen/article_item_margin"
		android:paddingStart="@dimen/margin_4"
		android:scaleX="@integer/img_flip_x"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.19999999"
		app:srcCompat="@drawable/ic_article_label" />

</androidx.constraintlayout.widget.ConstraintLayout>
